Ajuste final
fixes en la llamada al importe de la cuota, actualización de documentacion swagger
